--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -53,7 +53,16 @@ section.hero {
 }
 
 .hero-text {
+  margin-top: 75px;
   padding: 30px;
+}
+
+.hero-title {
+  font-size: 3.5em;
+}
+
+.hero-title span {
+  display: block;
 }
 
 .hero-description {
@@ -80,17 +89,15 @@ section.hero {
 
 /* Mobile Screene */
 @media (max-width: 768px) {
-  body {
-    padding: 0;
-    margin: 0;
-  }
   .navbar {
     padding-right: 20px;
+    margin-top: -5px;
   }
 
   .hero-text {
     text-align: center;
     padding: 10px;
+    margin-top: 20px;
   }
 
   .hero-title {
@@ -98,9 +105,13 @@ section.hero {
     padding-top: 40px;
   }
 
+  .hero-title span {
+    display: inline-block;
+  }
+
   .hero-description {
-    font-size: 1.4em;
-    width: 370px;
+    font-size: 1.2em;
+    width: 100%;
   }
 
   .client {
@@ -111,11 +122,55 @@ section.hero {
     width: 70px;
   }
 
+  .hero-image-wraper {
+    padding: 20px 0 0 0 !important;
+  }
+
   .hero-image {
     width: 100%;
-    height: 256px;
+    height: 286px;
     background-image: url("../images/image-hero-mobile.png");
-    background-size: contain;
+    background-size: cover;
+    background-position: 50% 0;
+    background-repeat: no-repeat;
+  }
+}
+
+/* tablet screen */
+@media (min-width: 768px) and (max-width: 991px) {
+  .navbar {
+    margin-top: -5px;
+    padding-right: 20px;
+  }
+
+  .content-wraper {
+    width: 100%;
+  }
+
+  .hero-text {
+    width: 100%;
+    text-align: center;
+  }
+
+  .hero-title span {
+    display: inline-block;
+  }
+
+  .hero-description {
+    width: 100%;
+    font-size: 2em;
+  }
+
+  .hero-image-wraper {
+    width: 100%;
+    padding: 20px 0 0 0 !important;
+  }
+
+  .hero-image {
+    width: 100%;
+    /* height: 256px; */
+    background-image: url("../images/image-hero-mobile.png");
+    background-size: cover;
     background-position: 50% 0;
     background-repeat: no-repeat;
   }
